test/expected/declare_hc8.out
declare x as short char8_t
        ^
9: error: "short char8_t" is illegal for built-in type
